--- a/src/App.css
+++ b/src/App.css
@@ -306,7 +306,7 @@ img {
 .round-img {
   border-radius: 50%;
 }
-
+/* -------------------------------------------------------------------------------------------------- */
 /* Forms */
 input {
   margin: 1.2rem 0;
